# plane_game

./: ASSIGNMENT_SUMMARY.txt  AUDIO_IMPLEMENTATION_BLUEPRINT.md  CAMERA_AND_TURNING_DIAGNOSTIC.md  CHANGES_QUICK_SUMMARY.txt  CHECKPOINT_PROMPT.md  CLAUDE.md  CLOUD_ASSETS_SPECIFICATION.md  CODE_REVIEW_PROCEDURAL_TEXTURE.md  CRITICAL_FIXES_NEEDED.md  CURRENT_WORK_PLAN.md  Cargo.toml  DIAGNOSTIC_FINDINGS.md  ENVIRONMENT_REALISM_PROMPT.md  FIXES_APPLIED.md  FLIGHT_CONTROL_IMPROVEMENT_ANALYSIS.md  FLIGHT_CONTROL_OPEN_SOURCE_REFERENCE.md  GAME_DESIGN.md  GEMINI.md  GEMINI_FLASH_JOB_CRASH_FIX.md  GEMINI_FLASH_JOB_DRONE_COLLISION.md  GEMINI_FLASH_JOB_DRONE_VISIBILITY.md  GEMINI_FLASH_JOB_TEXTURES.md  GEMINI_FLASH_PROMPT.md  GEMINI_KNOWLEDGE_UPDATE_AND_PLAN.md  GEMINI_PHASE_2_IMPROVED_PROMPT.md  GEMINI_PHASE_2_PROMPT.md  GEMINI_TEXTURE_IMPLEMENTATION_PROMPT.md  GRASS_TEXTURE_FIX_PLAN.md  PARALLEL_ASSIGNMENT.md  PARALLEL_WORK_PROMPTS.md  PARTICLE_EFFECTS_PLAN.md  PARTICLE_IMPLEMENTATION_CODE.md  PHASE3_IMPLEMENTATION_PROMPTS.md  PHYSICS_CONSTANTS_GUIDE.md  README.md  SESSION_CHANGES_COMPREHENSIVE.md  SESSION_STATUS_2026_02_06.md  TEXTURE_RESEARCH_SUMMARY.md  generate_brand.py
.claude/: settings.local.json
.github/: AUDIO-FIX-UNRECOGNIZED-FORMAT.md  BUGFIX-SPINNING.md  CONTROL-INSTABILITY-ANALYSIS.md  DAMPING-FIX-APPLIED.md  MODEL-ASSET-GUIDE.md  MODEL-UPGRADE-COMPLETE.md  PHASE3-COMPLETE.md  PHASE3.5-MISSILES.md  copilot-instructions.md  phase3-combat-code.md
docs/: FEATURE_PLANS.md  TECHNICAL_KNOWLEDGE.md
src/: assets.rs  drone.rs  main.rs  main.txt  procedural_textures.rs  (+1 more)
(+39 files in other folders)
